[gd_scene load_steps=31 format=3 uid="uid://ub7mv6ehtf72"]

[ext_resource type="Script" uid="uid://smkh4u8n1uhl" path="res://lvl_4.gd" id="1_niheu"]
[ext_resource type="Texture2D" uid="uid://b11vdq23et6wg" path="res://Sprites/eye_big.png" id="1_tgxlv"]
[ext_resource type="Texture2D" uid="uid://b2pbupgqaab07" path="res://Sprites/rooms/10.png" id="2_t533b"]
[ext_resource type="PackedScene" uid="uid://cgpm0ob1l2fk" path="res://player_v_2.tscn" id="2_tgxlv"]
[ext_resource type="Texture2D" uid="uid://l8re3yjvt22h" path="res://Sprites/rooms/viergesalope.png" id="4_t533b"]
[ext_resource type="PackedScene" uid="uid://cj8fwiqkc5air" path="res://book.tscn" id="6_6ntf1"]
[ext_resource type="PackedScene" uid="uid://8b5ohyvmxsbu" path="res://platform.tscn" id="7_emw0k"]
[ext_resource type="PackedScene" uid="uid://bg1yc11f54gtf" path="res://long_pt_move.tscn" id="7_o7vtu"]
[ext_resource type="PackedScene" uid="uid://j3gcywxflkf1" path="res://tentacle/scenes/arm.tscn" id="8_emw0k"]
[ext_resource type="PackedScene" uid="uid://c2dnk4rudvof8" path="res://littletransit.tscn" id="9_ufpfk"]
[ext_resource type="Texture2D" uid="uid://dfq8dux4abtuh" path="res://Sprites/rooms/longpt_smart.png" id="10_eidr8"]
[ext_resource type="PackedScene" uid="uid://lctx6vcyfebl" path="res://dead_player.tscn" id="12_7so1t"]
[ext_resource type="FontFile" uid="uid://e4jq22rajmsj" path="res://fonts/PixelOperator8-Bold.ttf" id="12_sfugp"]
[ext_resource type="Texture2D" uid="uid://blk4nhl2sv7pd" path="res://Sprites/rooms/8_less.png" id="13_yqkdm"]
[ext_resource type="PackedScene" uid="uid://bpb7glyeakns4" path="res://lvl_succeed_timer.tscn" id="16_d7q7f"]
[ext_resource type="PackedScene" uid="uid://bouga50fmso2m" path="res://apple.tscn" id="16_s24pw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t533b"]
size = Vector2(450, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o7vtu"]
size = Vector2(20, 283)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_emw0k"]
size = Vector2(1073, 238)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufpfk"]
size = Vector2(175, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i37vr"]
size = Vector2(23, 88)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eidr8"]
size = Vector2(412, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sfugp"]
size = Vector2(2186, 29.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7so1t"]
size = Vector2(76, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqkdm"]
size = Vector2(426, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_niheu"]
size = Vector2(443, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d7q7f"]
size = Vector2(3, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s24pw"]
size = Vector2(212, 110.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ty08h"]
size = Vector2(380, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kr7kd"]
size = Vector2(776, 20)

[node name="lvl4" type="Node2D"]
script = ExtResource("1_niheu")

[node name="player" parent="." instance=ExtResource("2_tgxlv")]
unique_name_in_owner = true
position = Vector2(-107, 58)

[node name="room1" type="Node2D" parent="."]

[node name="Sprite2D2" type="Sprite2D" parent="room1"]
position = Vector2(72, -8.000007)
scale = Vector2(0.71907216, 0.7319688)
texture = ExtResource("1_tgxlv")

[node name="Sprite2D" type="Sprite2D" parent="room1"]
texture = ExtResource("2_t533b")

[node name="Sprite2D" type="Sprite2D" parent="room1/Sprite2D"]
position = Vector2(1107, -333)
rotation = 3.1415927
texture = ExtResource("2_t533b")

[node name="platform" parent="room1/Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1087, -153)

[node name="platform2" parent="room1/Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1056, -166)

[node name="platform3" parent="room1/Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1042, -137)

[node name="platform4" parent="room1/Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1104, -210.00003)
rotation = -0.16580628

[node name="platform5" parent="room1/Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1052, -239.99994)
rotation = 0.3298672

[node name="platform6" parent="room1/Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1116, -260.00006)
rotation = -0.3298672

[node name="platform7" parent="room1/Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1180, -284)

[node name="platform8" parent="room1/Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1239, -313)

[node name="StaticBody2D" type="StaticBody2D" parent="room1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="room1/StaticBody2D"]
z_index = 2
position = Vector2(-163, 76)
shape = SubResource("RectangleShape2D_t533b")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="room1/StaticBody2D"]
position = Vector2(-962, -56)
shape = SubResource("RectangleShape2D_o7vtu")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="room1/StaticBody2D"]
position = Vector2(-525, -185)
shape = SubResource("RectangleShape2D_emw0k")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="room1/StaticBody2D"]
z_index = 3
position = Vector2(1197.5, -263)
shape = SubResource("RectangleShape2D_ufpfk")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="room1/StaticBody2D"]
z_index = 2
position = Vector2(1295.5, -311)
shape = SubResource("RectangleShape2D_i37vr")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="room1/StaticBody2D"]
z_index = 2
position = Vector2(1290, -437.5)
shape = SubResource("RectangleShape2D_eidr8")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="room1/StaticBody2D"]
z_index = 2
position = Vector2(2376, -340)
shape = SubResource("RectangleShape2D_sfugp")

[node name="platform" parent="room1/StaticBody2D" instance=ExtResource("7_emw0k")]
position = Vector2(728, -108)

[node name="CollisionShape2D8" type="CollisionShape2D" parent="room1/StaticBody2D"]
z_index = 1
position = Vector2(188, -118)
shape = SubResource("RectangleShape2D_7so1t")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="room1/StaticBody2D"]
z_index = 2
position = Vector2(-388, -24)
shape = SubResource("RectangleShape2D_yqkdm")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="room1/StaticBody2D"]
z_index = 2
position = Vector2(714.5, -257.5)
shape = SubResource("RectangleShape2D_niheu")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="room1/StaticBody2D"]
position = Vector2(2642.5, -427)
shape = SubResource("RectangleShape2D_d7q7f")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="room1/StaticBody2D"]
z_index = 1
position = Vector2(599, -358.25)
shape = SubResource("RectangleShape2D_s24pw")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="room1/StaticBody2D"]
z_index = 1
position = Vector2(683, -445)
shape = SubResource("RectangleShape2D_ty08h")

[node name="room2" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="room2"]
position = Vector2(-776, 0)
texture = ExtResource("4_t533b")

[node name="StaticBody2D" type="StaticBody2D" parent="room2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="room2/StaticBody2D"]
position = Vector2(-776, 76)
shape = SubResource("RectangleShape2D_kr7kd")

[node name="Polygon2D" type="Polygon2D" parent="room2"]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-600, 65, -600, 23, -614, 22, -614, 59)

[node name="book" parent="." instance=ExtResource("6_6ntf1")]
position = Vector2(-776, 58)

[node name="long_pt_move" parent="." instance=ExtResource("7_o7vtu")]
position = Vector2(129, 75)

[node name="platform" parent="." instance=ExtResource("7_emw0k")]
position = Vector2(429, 64)

[node name="platform" parent="platform" instance=ExtResource("7_emw0k")]
position = Vector2(23, -4)

[node name="platform" parent="platform/platform" instance=ExtResource("7_emw0k")]
position = Vector2(23, 0)

[node name="platform2" parent="." instance=ExtResource("7_emw0k")]
position = Vector2(460, 16)

[node name="platform3" parent="." instance=ExtResource("7_emw0k")]
position = Vector2(417, -11)

[node name="platform4" parent="." instance=ExtResource("7_emw0k")]
position = Vector2(484, -6)

[node name="platform5" parent="." instance=ExtResource("7_emw0k")]
position = Vector2(433, -24)

[node name="platform6" parent="." instance=ExtResource("7_emw0k")]
position = Vector2(396, -39)

[node name="long_pt_move2" parent="." instance=ExtResource("7_o7vtu")]
position = Vector2(485, -91)

[node name="long_pt_move3" parent="." instance=ExtResource("7_o7vtu")]
position = Vector2(798, -112)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_t533b")

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
position = Vector2(1107, -333)
rotation = 3.1415927
texture = ExtResource("2_t533b")

[node name="platform" parent="Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1087, -153)

[node name="platform2" parent="Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1056, -166)

[node name="platform3" parent="Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1042, -137)

[node name="platform4" parent="Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1104, -210.00003)
rotation = -0.16580628

[node name="platform5" parent="Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1052, -239.99994)
rotation = 0.3298672

[node name="platform6" parent="Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1116, -260.00006)
rotation = -0.3298672

[node name="platform7" parent="Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1180, -284)

[node name="platform8" parent="Sprite2D" instance=ExtResource("7_emw0k")]
position = Vector2(1239, -313)

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(881, -330)
texture = ExtResource("2_t533b")

[node name="platform7" parent="." instance=ExtResource("7_emw0k")]
position = Vector2(394, -111)

[node name="platform8" parent="." instance=ExtResource("7_emw0k")]
position = Vector2(378, -105)

[node name="platform9" parent="." instance=ExtResource("7_emw0k")]
position = Vector2(320.00003, -127.00001)
rotation = 0.16580628

[node name="Arm" parent="." instance=ExtResource("8_emw0k")]
position = Vector2(745, -589)

[node name="platform10" parent="." instance=ExtResource("7_emw0k")]
position = Vector2(704, -112)

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(188, -113)
texture = ExtResource("10_eidr8")

[node name="monster_message" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 1940.0
offset_top = -382.0
offset_right = 2184.0
offset_bottom = -353.0
theme_override_fonts/font = ExtResource("12_sfugp")
theme_override_font_sizes/font_size = 8
text = "Please feed me again"
metadata/_edit_use_anchors_ = true

[node name="littletransit" parent="." instance=ExtResource("9_ufpfk")]
position = Vector2(-348, 41.000004)
scale = Vector2(2.0086637, -0.8706472)

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(899, -251)
texture = ExtResource("10_eidr8")

[node name="littletransit3" parent="." instance=ExtResource("9_ufpfk")]
position = Vector2(1409, -376)

[node name="dead_player" parent="." instance=ExtResource("12_7so1t")]
position = Vector2(187, -131)

[node name="littletransit2" parent="." instance=ExtResource("9_ufpfk")]
position = Vector2(619, -284)

[node name="Arm2" parent="." instance=ExtResource("8_emw0k")]
unique_name_in_owner = true
position = Vector2(1761, -695)

[node name="Sprite2D5" type="Sprite2D" parent="."]
position = Vector2(2537, -427)
texture = ExtResource("13_yqkdm")

[node name="lvl_succeed_timer" parent="." instance=ExtResource("16_d7q7f")]

[node name="apple" parent="." instance=ExtResource("16_s24pw")]
position = Vector2(2537, -361)

[connection signal="timeout" from="lvl_succeed_timer" to="." method="_on_lvl_succeed_timer_timeout"]
